--- a/hobby/index.html
+++ b/hobby/index.html
@@ -257,18 +257,18 @@
       <h1 class="page__title">Hobby</h1>
     
     <h2 id="sports-music-and-research">Sports, Music, and Research</h2>
-<p>I enjoy riding and repairing bicycles. Recently I am trying tennis and trumpet. Through the long conditioning of a Ph.D. (jokingly, “Permanent Head Damage”) training and my subsequent career, I can’t help but write a <a href="https://tennis-ans.github.io">paper</a> about tennis. :)</p>
+<p>I enjoy <a href="https://www.comp.nus.edu.sg/~liangzk/images/bike.jpg">riding bicycles</a> and <a href="https://www.comp.nus.edu.sg/~liangzk/images/rbike.jpg">repairing bicycles</a>（aka bicycle reverse engineering). Recently I am trying tennis and trumpet. Through the long conditioning of a Ph.D. (jokingly, “Permanent Head Damage”) training and my subsequent career, I can’t help but write a <a href="https://tennis-ans.github.io">paper</a> about tennis. :)</p>
 
 <p>I also notice how research shares striking parallels with arts, crafts, and sports. 
-In each domain, our attention is often pulled toward the most obvious target: the paper in research, 
-the ball in tennis, and the sound in trumpet playing. The direct output, however, is rarely the true source of excellence. 
+In each domain, our attention is often pulled toward the most obvious target: the ball in tennis, 
+the sound in trumpet playing, and the paper in research. The direct output, however, is rarely the true source of excellence. 
 Often, the most intuitive path toward that target turns out to be the wrong one.</p>
 
-<p>What truly matters is the elegance in the flow: the flow of curiosity and ideas in research, 
-the flow of body movement and coordination in sport, the flow of phrasing and breath in music. 
+<p>What truly matters is the flow in the heart:  the flow of body movement and coordination in sport, 
+the flow of phrasing and breath in music, and the flow of curiosity and ideas in research. 
 Achieving the right balance often requires easing off force rather than applying more; 
-too much direct efforts lead to an incorrect equilibrium. Using flow as the guiding direction, 
-once the foundational techniques are carefully practiced, the results emerge naturally—
+too much direct efforts lead to an incorrect equilibrium. Using the elegance in the flow as the guiding direction, 
+once the foundational techniques are carefully practiced, the results emerge naturally —
 水到渠成 (“when the water arrives, the channel is formed”).</p>
 
 <p>In all these pursuits, achieving elegance form an optimization problem: Looking away from the direct output, 
@@ -281,16 +281,17 @@ transforming balance and efficiency into power and outstanding performance.</p>
 <div style="text-align: center;"><img src="https://www.comp.nus.edu.sg/~liangzk/images/hobbies.jpg" width="40%" /></div>
 
 <h2 id="运动音乐与研究">运动、音乐与研究</h2>
+<p>我喜欢<a href="https://www.comp.nus.edu.sg/~liangzk/images/bike.jpg">骑车</a>与<a href="https://www.comp.nus.edu.sg/~liangzk/images/rbike.jpg">修车</a>(或称：自行车逆向工程）。动手的事物让我感到一种新奇与宁静。最近我开始尝试网球和小号，这些事情看似毫不相干，却在练习的过程中，让我重新理解了“研究”的内在含义。博士训练往往漫长而严格，有人调侃Ph.D.是“永久性脑损伤” (Permenant Head Damage)。最终我没能抵挡这些训练对我的思维的影响，还是去写了一篇关于网球的<a href="https://tennis-ans.github.io">论文</a>. :)</p>
 
-<p>我喜欢骑车与修车。动手的事物让我感到一种新奇与宁静。最近我开始尝试网球和小号，这两件事看似毫不相干，却在练习的过程中，让我重新理解了“研究”这件事。博士训练往往漫长而苛刻，有人调侃Ph.D.是“永久性脑损伤”(Permenant Head Damage)。所以我还是没忍住，写了一篇关于网球的<a href="https://tennis-ans.github.io">论文</a>. :)</p>
+<p>然而在这样的训练中，我学到的不只是如何写论文，更是如何观察、体会和思考事物背后的系统性联系。我发现运动、音乐和研究之间存在着出乎意料的相似之处。在这三个领域中，人们往往会被最直接的目标吸引 — 运动里的网球击球、音乐中的乐器发声，和研究中的论文发表。但卓越的真正根源，从来不是这些外在的直接结果。最符合直觉、最显而易见的路径，可能很快有结果，但往往不是通向卓越的那一条，甚至会是完全背道而驰，形似神非。</p>
 
-<p>然而在这样的过程中，我学到的不只是如何写论文，更是如何观察、体会和思考事物的背后联系。我发现运动、音乐和研究之间存在着出乎意料的相似之处。在这三个领域中，人们往往会被最直接的目标吸引 — 运动里的网球击球、音乐中的乐器发声，和研究中的论文发表。但真正决定水平高低的，从来不是这些外在的直接结果。最符合直觉、显而易见的路径，可能很快有结果，但往往不是通向卓越的那一条，甚至会是与卓越完全背道而驰，形似神非。</p>
-
-<p>决定一切的，是内心中的流动性 — 运动中身体的协调与节奏的流动，音乐中呼吸与旋律的流动，以及研究中的好奇与思路的流动。它们的共同点在于：只有学会顺势而为，而不是费力拉扯，平衡才会出现。真正的挑战是如何学会去收力，而不是去盲目发力。在直接的目标上过度用力会陷在一个错误的平衡中。真正的掌控，来自紧张中恰到好处的放松，而不是更大的用力。尊重事物本身的规律，以其中优美的流动性为向导，当用在正确的基本上方法的努力达到时，结果会自然出现 — 水到渠成。至道常隐于形外。</p>
+<p>决定一切的，是内心中的流动性 — 运动中身体协调与节奏的流动，音乐中呼吸与旋律的流动，以及研究中的好奇与思路的流动。它们的共同点在于：只有学会顺势而为，而不是费力拉扯，平衡才会出现。其间真正的挑战是如何学会去收力，而不是去盲目发力。在直接的目标上过度用力会陷在一个错误的平衡中。真正的掌控，来自紧张中恰到好处的放松，而不是更大的用力。尊重事物本身的规律，以其中优美的流动性为向导，当用在正确的基本上方法上的努力足够时，结果会自然出现 — 水到渠成。至道常隐于形外。</p>
 
 <p>这种过程是一种“优化问题”。要获得优雅的效率，就必须把注意力从结果上移开，转向理解过程本身。先让动作、思考或技巧达到自然的协调，再去逐渐增加力量并保持平衡。努力并非目标，而是平衡与效率自然积累的产物。</p>
 
 <p>很多时候，我们所追求的“突破”，其实不是更努力，而是更明白如何让事情自己发生。</p>
+
+<p><img src="https://www.comp.nus.edu.sg/~liangzk/images/cname.jpg" /><img src="https://www.comp.nus.edu.sg/~liangzk/images/seal.jpg" /></p>
 
   </div>
 </div>
